# indieStudio

./: CMakeLists.txt  README.md  my_project
ressources/: Bob-omb.c4d  bomberman.dae  bomberman.fbx  bomberman.glb  bomberman.gltf  bomberman.gltf.glb  bomberman.mtl  bombermanout.iqm  crate.mtl  test.gltf  untilted.glb  untilted.gltf  untitled.mtl
ressources/Shaders/: light.fs  light.vs  lightColor.vs  lighting.fs  particles.vs
src/: global.hpp  include.hpp  main.cpp
src/Audio/: Sounds.cpp
src/Buttons/: Button.cpp  Button.hpp  ButtonBomberman.cpp  ButtonBomberman.hpp
src/Entities/: AI.cpp  AI.hpp  Bomb.cpp  Bomb.hpp  Bomberman.cpp  Bomberman.hpp  Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Light.hpp  Map.cpp  Map.hpp  PowerUp.cpp  PowerUp.hpp  Skybox.cpp  Skybox.hpp
src/Models/: ParticleTexturedModel.hpp  TexturedModel.cpp  TexturedModel.hpp
src/Particles/: Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Particles.cpp  Particles.hpp
src/RenderEngine/: ButtonsRenderer.cpp  ButtonsRenderer.hpp  DisplayManager.cpp  DisplayManager.hpp  EntityRenderer.cpp  EntityRenderer.hpp  FrameRate.cpp  FrameRate.hpp  Master2DRenderer.cpp  Master2DRenderer.hpp  Master3DRenderer.cpp  Master3DRenderer.hpp  MasterRenderer.cpp  MasterRenderer.hpp  ParticlesRenderer.cpp  ParticlesRenderer.hpp
src/Shaders/: LightShader.cpp  LightShader.hpp  LightShaderColor.cpp  LightShaderColor.hpp  ParticlesShader.cpp  ParticlesShader.hpp  SkyboxShader.cpp  SkyboxShader.hpp
src/Tools/: Clock.hpp  GenMesh.cpp  GenMesh.hpp
